# ETEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Library Licenses.md  README.md  appveyor.yml  features.md
Engine/: CMakeLists.txt
Engine/config/: CMakeLists.txt
Engine/config/editor/: editor.gresource.xml
Engine/config/gtk-3.0/: settings.ini
Engine/resources/: CMakeLists.txt  asset_database.json  asset_database_tools.json  asset_database_traceserver.json
Engine/resources/assets/: cie.etac  cie.json.etac
Engine/resources/assets_common/: ComputeGlyphSDF.etac  FwdNullShader.etac  FwdNullShader.glsl  PostGenericUi.etac  PostRmlUiBlit.etac  PostRmlUiSdf.etac
Engine/resources/assets_traceserver/: template_close_tab.etac  template_close_tab.rml  template_trace_panel.etac  template_trace_panel.rml  trace.etac  trace.rml  trace_logo_colour.etac  trace_logo_colour_thick.etac  trace_logo_grayscale.etac  trace_style.etac  trace_style.rcss
Engine/scripts/: copyResources_windows.bat  utils.cmake
Engine/source/: CMakeLists.txt
Engine/source/Engine/: CMakeLists.txt  linkerHelper.h  stdafx.h
Engine/source/EtApplication/: CMakeLists.txt  GuiApplication.cpp  GuiApplication.h  GuiWindow.cpp  GuiWindow.h  stdafx.cpp  stdafx.h
Engine/source/EtBuild/: CMakeLists.txt  DevelopmentPaths.cpp  DevelopmentPaths.cpp.in  DevelopmentPaths.h  EngineVersion.cpp.in  EngineVersion.h
Engine/source/EtCooker/: CMakeLists.txt  CompiledDataGenerator.cpp  CompiledDataGenerator.h  Cooker.cpp  Cooker.h  CookerFwd.h  PackageWriter.cpp  PackageWriter.h  mainCooker.cpp
Engine/source/EtCore/: CMakeLists.txt  linkerHelper.h  stdafx.h
Engine/source/EtEditor/: CMakeLists.txt  EditorApp.cpp  EditorApp.h  EditorBase.cpp  EditorBase.h  EditorCamera.cpp  EditorCamera.h  EditorConfig.cpp  EditorConfig.h  EditorNode.cpp  EditorNode.h  EditorScene.cpp  EditorScene.h  EditorTickOrder.h  SceneEditor.cpp  SceneEditor.h  SceneEditorListener.h  SceneSelection.cpp  SceneSelection.h  stdafx.cpp  stdafx.h
Engine/source/EtFramework/: CMakeLists.txt  linkerHelper.h  stdafx.cpp  stdafx.h
Engine/source/EtGUI/: CMakeLists.txt  GuiExtension.cpp  GuiExtension.h  linkerHelper.h  stdafx.cpp  stdafx.h
Engine/source/EtMath/: CMakeLists.txt  Geometry.cpp  Geometry.h  MathInc.cpp  MathInc.h  MathUtil.h  Matrix.h  Matrix.inl  Quaternion.h  Quaternion.inl  Random.cpp  Random.h  Transform.h  Transform.inl  Vector.h  Vector.inl
Engine/source/EtPipeline/: CMakeLists.txt  EditorAsset.cpp  EditorAsset.h  EditorAssetMeta.h  PipelineCtx.cpp  linkerHelper.h
Engine/source/EtRHI/: CMakeLists.txt  linkerHelper.h  stdafx.cpp  stdafx.h
Engine/source/EtRendering/: CMakeLists.txt  linkerHelper.h  stdafx.cpp  stdafx.h
Engine/source/EtRuntime/: AbstractFramework.cpp  AbstractFramework.h  BootConfig.cpp  BootConfig.h  CMakeLists.txt  stdafx.cpp  stdafx.h
Engine/source/EtToolCooker/: mainCooker.cpp
Engine/source/EtTraceServer/: CMakeLists.txt  TraceClient.cpp  TraceClient.h  TraceGuiController.cpp  TraceGuiController.h  TraceServer.cpp  TraceServer.h  mainTraceServer.cpp  stdafx.cpp  stdafx.h
Engine/source/Testing/: CMakeLists.txt  mainTesting.cpp
Engine/tools/: ProjectCooker.args.json  et-visualizers.natvis  robin_hood.natvis
Engine/unit_tests/: CMakeLists.txt  mainTesting.cpp  mainTesting.h
Engine/unit_tests/ECS/: ArchetypeTest.cpp  ComponentPoolTest.cpp  ComponentRegistryTest.cpp  ComponentViewTest.cpp  EcsCommandBufferTest.cpp  EcsControllerTest.cpp  EcsSystemScheduleTest.cpp  EcsTestUtilities.cpp  EcsTestUtilities.h  SystemTest.cpp  TestComponentViews.h  TestComponents.h
Engine/unit_tests/FileSystem/: FileSystemTest.cpp  JSONtest.cpp  PathTest.cpp  UriTest.cpp  XMLtest.cpp  json_test_file.json  xml_test_file.xml
Engine/unit_tests/Helper/: GLTFTest.cpp  HashTest.cpp  SmartPointerTest.cpp
Engine/unit_tests/Math/: MatrixTest.cpp  QuaternionTest.cpp  TransformTest.cpp  VectorTest.cpp
Projects/Demo/: CMakeLists.txt
Projects/Demo/resources/: asset_database.json
dependancies/submodules/: CMakeLists.txt
dependancies/submodules/assimp/: CMakeLists.txt
dependancies/submodules/bullet/: CMakeLists.txt
dependancies/submodules/glad/: CMakeLists.txt
dependancies/submodules/glfw/: CMakeLists.txt
dependancies/submodules/mikkt/: CMakeLists.txt
dependancies/submodules/rttr/: CMakeLists.txt
dependancies/submodules/stb/: CMakeLists.txt
dependancies/submodules/vcpkg/: CMakeLists.txt
source/Demo/: CMakeLists.txt  Demo.vcxproj  Demo.vcxproj.filters  MainFramework.cpp  MainFramework.h  MainFramework.hpp  main.cpp  stdafx.h  stdafx.hpp
source/Demo/Config/: config.json
source/Demo/Materials/: EmissiveMaterial.cpp  EmissiveMaterial.h  EmissiveMaterial.hpp  ParamPBRMaterial.cpp  ParamPBRMaterial.h  ParamPBRMaterial.hpp  TexPBRMaterial.cpp  TexPBRMaterial.h  TexPBRMaterial.hpp
source/Demo/Planets/: Earth.cpp  Earth.h  Earth.hpp  Moon.cpp  Moon.h  Moon.hpp
source/Demo/Resources/: HYGmxyz.json
source/Demo/Scenes/: PhysicsTestScene.cpp  PhysicsTestScene.h  PlanetTestScene.cpp  PlanetTestScene.h  PlanetTestScene.hpp  ShadingTestScene.cpp  ShadingTestScene.h  ShadingTestScene.hpp  SkyboxTestScene.cpp  SkyboxTestScene.h  SkyboxTestScene.hpp  TestScene.cpp  TestScene.h  TestScene.hpp
source/Demo/Shaders/: DefPBRParamShader.glsl
source/Engine/: CMakeLists.txt  ETEngine.vcxproj  ETEngine.vcxproj.filters  linkerHelper.h  stdafx.h  stdafx.hpp
source/Engine/Audio/: AudioData.cpp  AudioData.h  AudioManager.cpp  AudioManager.h  OpenAL_ETM.h
source/Engine/Base/: AbstractFramework.cpp  AbstractFramework.h  AbstractFramework.hpp  Context.h  Context.hpp  GlfwRenderArea.cpp  GlfwRenderArea.h  InputManager.cpp  InputManager.h  InputManager.hpp  SceneContext.h  SdlRenderArea.cpp  SdlRenderArea.h  Settings.cpp  Settings.h  Settings.hpp  TickOrder.h  Time.cpp  Time.h
source/EtCooker/: CMakeLists.txt  CompiledDataGenerator.cpp  CompiledDataGenerator.h  mainCooker.cpp
source/EtCore/: CMakeLists.txt  stdafx.h
source/EtMath/: CMakeLists.txt  Matrix.h  Quaternion.h  Transform.inl
(+2222 files in other folders)
