
# Targets built from source
############################

message(STATUS "Adding EtMath targets ...")
add_subdirectory (EtMath)
message(STATUS "Adding EtCooker targets ...")
add_subdirectory (EtCooker)
message(STATUS "Adding EtCore targets ...")
add_subdirectory (EtCore)
message(STATUS "Adding Engine targets ...")
add_subdirectory (Engine)
