
# Targets built from source
############################

add_subdirectory (EtBuild)
add_subdirectory (EtMath)
add_subdirectory (EtCore)
add_subdirectory (EtRendering)
add_subdirectory (EtFramework)
add_subdirectory (EtGUI)
add_subdirectory (EtRuntime)
add_subdirectory (EtPipeline)
add_subdirectory (EtTraceServer)
add_subdirectory (EtCooker)
add_subdirectory (EtEditor)
